tests/ui/resolve/resolve-conflict-import-vs-extern-crate.stderr
error[E0254]: the name `std` is defined multiple times
  --> $DIR/resolve-conflict-import-vs-extern-crate.rs:1:5
   |
LL | use std::slice as std;
   |     ^^^^^^^^^^^^^^^^^ `std` reimported here
   |
   = note: `std` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | use std::slice as other_std;
   |                   ++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0254`.
