tests/ui/resolve/resolve-conflict-import-vs-extern-crate.rs
use std::slice as std; //~ ERROR the name `std` is defined multiple times

fn main() {
}
